<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/hint_imageview_resim"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_info2"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/hint_textview_baslik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:text="@string/advertising_watch"
        android:textAlignment="center"
        android:textColor="#EF5350"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="17dp"
        android:paddingBottom="17dp">

        <TextView
            android:id="@+id/hint_textview_little_baslik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/learn_tips_or_earn_trial"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hint_textview_little_baslik2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/hint_textview_little_baslik3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/learn_tips_or_earn_trial2"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:id="@+id/hint_linear_load_ad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:animateLayoutChanges="true"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBar2"
                style="@android:style/Widget.Holo.Light.ProgressBar"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/hint_textview_little_baslik4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/loading_advertising"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/hint_button_hint"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/dialog_button"
            android:fontFamily="@font/righteous"
            android:text="@string/learn_answer"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/hint_button_addheart"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/dialog_button"
            android:fontFamily="@font/righteous"
            android:text="@string/earn_hearth"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/hint_button_close"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/dialog_button"
            android:fontFamily="@font/righteous"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>