<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/imageview_resim"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:srcCompat="@drawable/stop" />

    <TextView
        android:id="@+id/textview_baslik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:text="@string/you_have_no_rights__you_can_right_win_by_watching_ads"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/heartdialog_button_anasayfa"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/dialog_button"
            android:fontFamily="@font/righteous"
            android:text="@string/home_page"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="normal" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/heartdialog_linear_load_ad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="invisible">

                <ProgressBar
                    android:id="@+id/progressBar3"
                    style="@android:style/Widget.Holo.Light.ProgressBar"
                    android:layout_width="35dp"
                    android:layout_height="35dp" />

                <TextView
                    android:id="@+id/textview_baslik2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/loading_advertising"
                    android:textColor="#ffffff"
                    android:textSize="11sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <Button
                android:id="@+id/heartdialog_button_reklamizle"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/dialog_button"
                android:fontFamily="@font/righteous"
                android:text="@string/advertisement_watch"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal"
                android:visibility="visible" />

        </FrameLayout>

    </LinearLayout>
</LinearLayout>