<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/particallinear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <ImageView
                    android:id="@+id/activitytebrikler_nextquest_star1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="8dp"
                    app:srcCompat="@drawable/ic_star_off" />

                <ImageView
                    android:id="@+id/activitytebrikler_nextquest_star2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    app:srcCompat="@drawable/ic_star_off" />

                <ImageView
                    android:id="@+id/activitytebrikler_nextquest_star3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@drawable/ic_star_off" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/particallinear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:fontFamily="@font/quicksand_bold"
                    android:id="@+id/activitytebrikler_textview_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/congratulations"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/activitytebrikler_textview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/all_sections_complete"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/particallinear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <Button
                    android:fontFamily="@font/righteous"
                    android:id="@+id/activitytebrikler_button_anasayfa"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/dialog_button"
                    android:text="@string/home_page"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <Button
                    android:fontFamily="@font/righteous"
                    android:id="@+id/activitytebrikler_button_bolumler"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/dialog_button"
                    android:text="@string/levels"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>